crucible-concurrency/examples/cbl/threads_ids.out.good
Failure for examples/cbl/threads_ids.cbl:14:5: error: in main
Positive counter
